# optitrust

./: .bashrc  .emacs  .gitignore  .gitmodules  .mailmap  .ocamlformat  .vimrc  Bind.v  CONTRIBUTORS.md  FORMATTING.md  INSTALL.md  INSTALL_EXTRA.md  LICENSE.md  LambdaSemantics.v  Language.v  Makefile  MyLibEnv.v  Notation.v  PATH.md  README.md  SCRIPT.md  Semantics.v  SemanticsLL.v  Singularity  TLCbuffer.v  TODO.md  TrGroup.v  TrGroupFun.v  TrLowLevel.v  TrLowLevelFun.v  TrSoA.v  TrSoAFun.v  TrTiling.v  TrTilingFun.v  Transformation.v  Transfromations.v  TypeSoundess.v  TypeSoundness.v  Typing.v  VSCODE_CUSTOMIZE.md  (+32 more)
apac/: apac.ml  dune
lib/: dune  optitrust.ml
lib/ast/: alist.ml  ast.ml  ast.mli  ast_to_text.ml  barrier_trm.ml  contextualized_error.ml  dir.ml  dune  gpu_trm.ml  mark.ml  matrix_trm.ml  mlist.ml  pattern.ml  trm.ml  trm_unify.ml  typ.ml
lib/framework/: arith_core.ml  ast_to_js.ml  context.ml  convention.ml  dune  flags.ml  internal.ml  marks_basic.ml  prelude.ml  prelude_valid.ml  resources.ml  scope.ml  scope_computation.ml  show.ml  style.ml  trm_matching.ml  trm_pattern.ml
lib/optilambda/: dune  optilambda.ml  optilambda_html.ml  optilambda_printer.ml  optilambda_style.ml  optilambda_syntax.md
lib/transfo/: accesses.ml  accesses_basic.ml  accesses_core.ml  align.ml  align_basic.ml  align_core.ml  all_transfos.ml  apac_basic.ml  apac_core.ml  arith.ml  arith_basic.ml  arith_core.ml  arrays.ml  arrays_core.ml  barriers.ml  barriers_basic.ml  dune  expr_basic.ml  expr_core.ml  function.ml  function_basic.ml  function_core.ml  ghost.ml  ghost_pair.ml  ghost_pure.ml  gpu.ml  gpu_basic.ml  if_core.ml  instr.ml  instr_basic.ml  instr_core.ml  label.ml  label_basic.ml  loop.ml  loop_basic.ml  loop_core.ml  loop_swap.ml  marks.ml  matrix.ml  matrix_basic.ml  (+21 more)
lib/utils/: benchmark_logger.ml  dune  json.ml  list.ml  option.ml  tools.ml
src/: Ast_fromto_AstC.ml  Makefile  accesses.ml  accesses_basic.ml  accesses_core.ml  align.ml  align_basic.ml  align_core.ml  aos_to_soa.ml  apac.ml  apac_basic.ml  apac_core.ml  arith.ml  arith_basic.ml  arith_core.ml  arithsimpl.ml  arithsimpl_core.ml  arithsimplifier.ml  array_tiling.ml  arrays.ml  arrays_basic.ml  arrays_core.ml  ast.ml  astC_to_c.ml  ast_check.ml  ast_data.ml  ast_of_clang.ml  ast_to_c.ml  ast_to_js.ml  ast_to_json.ml  ast_to_rawC.ml  ast_to_text.ml  cMenhir_to_astRawC.ml  cRawAst_to_ast.ml  cast.ml  cast_basic.ml  cast_core.ml  clang_ast_parser.ml  clang_to_ast.ml  clang_to_astRawC.ml  (+112 more)
src/apac/: apac_backend.ml  apac_const.ml  apac_constification.ml  apac_dep.ml  apac_flags.ml  apac_lvar.ml  apac_macros.ml  apac_main.ml  apac_miscellaneous.ml  apac_old.ml  apac_parallelization.ml  apac_preprocessing.ml  apac_profiler.ml  apac_profiling.ml  apac_records.ml  apac_reset.ml  apac_task_candidate_discovery.ml  apac_tasks.ml
src/ast/: ast.ml  ast_check.ml  ast_data.ml  ast_to_js.ml  ast_to_text.ml  context.ml  dir.ml  mark.ml  matrix_trm.ml  mlist.ml  pattern.ml  scope.ml  scope_computation.ml  style.ml  subst.ml  trm.ml  trm_matching.ml  typ.ml
src/c/: Ast_fromto_AstC.ml  astC_to_c.ml  cMenhir_to_astRawC.ml  cParsers.ml  c_scope.ml  clang_to_astRawC.ml  resource_clexer.mll  resource_cparser.mly
src/cparser/: AST.ml  AST.mli  Automaton.mli  Binary.mli  Builtins0.mli  C.ml  C.mli  C2C.ml  CBuiltins.ml  Cabs.ml  Ceval.ml  Cexec.mli  Clflags.ml  Compiler.mli  Config.ml  Config.mli  Conventions1.ml  Conventions1.mli  Cprint.ml  Cshmgen.ml  Cshmgen.mli  Csyntax.ml  Ctypes.ml  Ctyping.ml  Ctyping.mli  Cutil.ml  Cutil.mli  Debug.ml  Debug.mli  DecidableClass.mli  Decidableplus.ml  Decidableplus.mli  Elab.ml  Elab.mli  FILES  IEEE754_extra.mli  Initializers.ml  Initializers.mli  Interpreter.mli  Interpreter_correct.mli  (+35 more)
src/nobrace/: nobrace.ml  nobrace_transfo.ml
src/ppx_transfo/: ppx_transfo.ml
src/resources/: resource_computation.ml  resource_contract.ml  resource_formula.ml  resource_set.ml  resource_trm.ml
src/runtime/: run.ml  stats.ml  trace.ml  trace_query.ml
src/tools/: json.ml  tools.ml  xfile.ml  xlist.ml  xoption.ml
src/transfo/: accesses.ml  accesses_basic.ml  accesses_core.ml  align.ml  align_basic.ml  align_core.ml  apac.ml  apac_basic.ml  apac_constify.ml  apac_core.ml  apac_epilogue.ml  apac_modules.ml  apac_old.ml  apac_prologue.ml  apac_taskify.ml  apac_tasks.ml  arith.ml  arith_basic.ml  arith_core.ml  arrays.ml  arrays_basic.ml  arrays_core.ml  cast_basic.ml  cast_core.ml  expr.ml  expr_basic.ml  expr_core.ml  flow.ml  flow_basic.ml  flow_core.ml  function.ml  function_basic.ml  function_core.ml  ghost.ml  ghost_pair.ml  ghost_pure.ml  if.ml  if_basic.ml  if_core.ml  instr.ml  (+39 more)
tests/: .gitignore  .merlin  Common.Makefile  Makefile  Tests.Makefile  add_test.sh  batch_tests.sh  dune  extract_first_transfo.sh  gen_tests_files_for_debug.sh  ignore.tests  ignore_for_compile.tests  rename_test.sh  renaming.sh  tester.ml
tests/alist/: Makefile  dune  dune-workspace.afl  naive_alist.ml
tests/apac/: apac_annotate.cpp  apac_annotate.ml  apac_annotate_exp.cpp  apac_constify.cpp  apac_constify.ml  apac_constify_args.ml  apac_constify_args_exp.cpp  apac_constify_exp.cpp  apac_constify_functions_arguments.cpp  apac_constify_functions_arguments_exp.cpp  apac_constify_let_mult.ml  apac_constify_let_mult_exp.cpp  apac_constify_let_mult_none.cpp  apac_constify_let_mult_none.ml  apac_constify_pointers.cpp  apac_constify_pointers.ml  apac_constify_pointers_exp.cpp  apac_constify_prototypes.ml  apac_constify_prototypes_exp.cpp  apac_constify_recursive.ml  apac_constify_recursive_exp.cpp  apac_constify_recursive_functions.cpp  apac_constify_recursive_functions.ml  apac_constify_recursive_functions_exp.cpp  apac_constify_structures.cpp  apac_constify_structures.ml  apac_constify_structures_exp.cpp  apac_extract_function_calls.ml  apac_extract_function_calls_exp.cpp  apac_heapify.cpp  apac_heapify.ml  apac_heapify_exp.cpp  apac_heapify_nested_seq.cpp  apac_heapify_nested_seq.ml  apac_heapify_nested_seq_exp.cpp  apac_insert_tasks_naive.ml  (+95 more)
tests/ast/: .gitignore  (+81 more)
trace_server/: dune  trace_server.ml
(+4080 files in other folders)
