(library
  (name optitrust)
  (public_name optitrust)
  (libraries (re_export optitrust.utils) (re_export optitrust.ast) (re_export optitrust.framework))
  (modes byte native)
  (flags ((:standard \ -short-paths) -warn-error -69 -w -9-27-32-33))
  ;could have faster compilation with -opaque?
  (ocamlopt_flags (-opaque)))

(documentation)
