(library
  (name optitrust)
  (public_name optitrust)
  (preprocess (pps ppx_transfo))
  (libraries clangml refl pprint str base64)
  ;FUTURE USE libraries compcert_parser
  (modes byte native)
  ;could have faster compilation with -opaque?
  (ocamlopt_flags (:standard -opaque)))

(include_subdirs unqualified)

(documentation)

(env
  (dev
    (flags (:standard -warn-error -69 -w -9-27-32-33))))
