(library
  (name optitrust_utils)
  (public_name optitrust.utils)
  (preprocess (pps ppx_transfo ppx_deriving.show ppx_deriving.ord))
  (libraries pprint base64 str unix)
  (modes byte native)
  (flags ((:standard \ -short-paths) -warn-error -69 -w -9-27-32-33))
  ;could have faster compilation with -opaque?
  (ocamlopt_flags (-opaque)))

(include_subdirs unqualified)

(documentation)
